--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,28 +1,54 @@
 /* Body */
 body {
-    /* font-family: 'Libre Franklin', sans-serif; */
-    font-family: 'Source Sans Pro', sans-serif;
-  
+    /* font-family: 'Source Sans Pro', sans-serif; */
+    /* font-family: 'Karla', sans-serif; */
+    font-family: 'Roboto', sans-serif;
   
 }
 
 /* Quick Links */
 .quickLinks {
-    background-color:  rgb(219,38,14);
+    background-color: #9C1A09;
+
+  
 }
+
+.quickLinks ul {
+
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+ 
+}
+
+.quickLinks li {
+    float: right;
+    padding: 0;
+    margin-bottom: 0;
+  
+  }
+  
+.quickLinks li a {
+    
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 5px 10px;
+    text-decoration: none;
+    font-size: 12px; 
+    /* border-right: 1px solid white; */
+  }
+  
 /* Header Area */
 .logo {
-    /* margin: auto; */
     margin: 0;
     width: 75%;
     height: 80%;
     margin-bottom: -100px;
-    
-   
 }
 
 .logo-area {
-    /* margin-bottom: -30px;  */
     margin-left: 0%; 
 }
 
@@ -39,8 +65,7 @@ body {
 /* Social Media Icons-NavBar */
 .social-media-icons .fab {
     color: rgb(219,38,14);
-    margin: 10px;
-     
+    margin: 10px;  
 }
 
 .social-media-icons {
@@ -61,8 +86,6 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    /* -webkit-box-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
-    box-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1); */
 }
 
 .navbar {
@@ -70,15 +93,8 @@ body {
     margin: 0;
     padding: 5px 25px;
     overflow: hidden;
-    /* background-color: #333; */
     list-style: none;
-    /* background: #f4f4f4; */
-    /* border: .5px #ccc solid; */
-    border-right: none;
-    border-left: none;
-    border: none;
-    
-    
+ 
   }
   
  .navbar li {
@@ -94,12 +110,18 @@ body {
     text-decoration: none;
     letter-spacing: 3px;
     
-  
+    border: 1px solid transparent;
   }
   
   .navbar li a:hover {
     color: rgb(219,38,14);
+   
+    border-bottom: 1px solid red;
+    /* border-bottom-width: thick; */
   }
+
+
+
 
   /* Search Bar */
 
@@ -111,24 +133,85 @@ body {
       width: 80%;
   }
 
-  /* Squares */  
+  /* Big Image */  
   /* NOTE: Don't forget to clean out this code */
 
  .bigImage {
     background-image: url("../images/Dancer3.jpg");
-    padding: 250px; 
+    padding: 225px; 
     background-size: cover;
     margin-top: 30px; 
+    position: relative;
+    z-index: 10;
  }
+
+ .bigImage::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(0,0,0,0.01),rgba(0,0,0,0.75));
+    z-index: -1;
+ }
+ 
+
+ .motto {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.2;
+    text-shadow: 4px 4px 12px rgba(0,0,0,.75);
+     color: whitesmoke;
+     text-align: center;
+    
+  
+ }
+
+ .value {
+     text-align: center;
+  
+ }
+ .mainLinkArea {
+    
+    background-color: black;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.8);
+    padding: 20px;
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
+ }
+
 
  .mainLink {
-   padding: 45px;
-   background-color: red;
-   opacity: 0.5;
+    text-align: center;
+    position: relative;
+    color:white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .22);
+    font-size: 20px; 
+ 
+   
+   
+   
  }
 
+ .mainLinkArea:hover{
+     background-color: red;
+     cursor: pointer;
+ }
 /* Events and News Section */
 
+.eventsAndNews {
+    padding-left: 20px; 
+    padding-right: 20px;
+    background-color: #f1f2f3;
+}
 
 .eventsAndNews h2 {
     text-align: center;
@@ -138,11 +221,13 @@ body {
 
 .events,
 .news {
-    border: .5px #ccc solid;
+    /* border: .5px #ccc solid; */
     padding: 15px;
     height: 100%;
     min-height: 600px;
-    margin-top: 30px; 
+    /* margin-top: 30px;  */
+  
+    
 }
 
 
@@ -205,6 +290,11 @@ body {
   
 }
 
+.button {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%
+}
 
 /* Mission Statement */
 .mission-statement {
@@ -235,7 +325,7 @@ body {
 
 .mission-statement-text {
     /* font-family: 'Chivo', sans-serif; */
-    font-family: 'Poiret One', cursive;
+    /* font-family: 'Poiret One', cursive; */
     text-align: center;
     position: relative;
     color:white;
@@ -244,9 +334,9 @@ body {
     font-size: 20px; 
 }
 
-.mission-statement:hover {
+/* .mission-statement:hover {
     font-weight: bold;
-}
+} */
 .mission-statement-text li {
     text-align: left;
     margin-left: 10%; 
@@ -255,6 +345,11 @@ body {
 
 
 /* Big Links */
+
+.bigLinkArea {
+    background-color: #f1f2f3;
+    padding: 50px; 
+}
 html {
     box-sizing: border-box; }
   
