--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,6 +75,7 @@ body {
 
 .fab:hover {
     color: black;
+    transition: all 0.3s ease 0s;
   }
 
   input[type="text"]::placeholder {
@@ -115,8 +116,8 @@ body {
   
   .navbar li a:hover {
     color: rgb(219,38,14);
-   
     border-bottom: 1px solid red;
+    transition: all 0.3s ease 0s;
     /* border-bottom-width: thick; */
   }
 
@@ -204,6 +205,7 @@ body {
  .mainLinkArea:hover{
      background-color: red;
      cursor: pointer;
+     transition: all 0.3s ease 0s;
  }
 /* Events and News Section */
 
@@ -249,6 +251,7 @@ body {
 
 .event-summary-link:hover {
    opacity: 0.5;
+   transition: all 0.3s ease 0s;
 }
 
 
@@ -601,4 +604,40 @@ html {
 
 .linkList li {
   list-style: none;
+}
+
+/* Program Page */
+
+.programTitle {
+    color: rgb(219,38,14);
+    letter-spacing: 3px;
+    margin-top: 30px; 
+}
+
+.section-a img {
+    overflow: hidden;
+    height: 200px;
+    width: 200px;
+}
+
+.section-a .button {
+    margin: 0; 
+    color: rgb(219,38,14);
+  background-color:  white;
+  border-color: black; 
+  border-radius: 50px;
+    transition: all 0.3s ease 0s;
+  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
+  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
+}
+
+.section-a .button:hover {
+    margin: 0; 
+    color: white;
+  background-color:  rgb(219,38,14);
+  border-color: white; 
+  border-radius: 50px;
+  transition: all 0.3s ease 0s;
+  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
+  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
 }
