--- a/CSS/style.css
+++ b/CSS/style.css
@@ -641,3 +641,11 @@ html {
   text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
   text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
 }
+
+/* Resources */
+
+.resourceTitle {
+    color: rgb(219,38,14);
+    letter-spacing: 3px;
+    margin-top: 30px; 
+}
