--- a/CSS/style.css
+++ b/CSS/style.css
@@ -662,6 +662,7 @@ html {
     color: rgb(219,38,14);
     letter-spacing: 3px;
     margin-top: 30px; 
+    padding-left: 30px;
 }
 
 input,
@@ -693,11 +694,12 @@ input[type="email"],
  }
 
  textarea {
-    height: 100px; 
+    height: 150px; 
  }
 
  form {
-     padding-right: 200px; 
+     padding-right: 30px; 
+     padding-left: 30px;
  }
 
  input[type="submit"] {
@@ -710,4 +712,40 @@ input[type="email"],
    color: white; 
    border: white; 
   
+}
+
+.contact-form {
+  border: 0.5px solid black; 
+  padding: 10px; 
+}
+/* Program Page */
+
+.programBigImage {
+        background-image: url("../images/Dancer1.jpg");
+        padding: 100px; 
+        background-size: cover;
+        margin-top: 30px; 
+        position: relative;
+        z-index: 10;
+     }
+    
+.programBigImage::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(rgba(0,0,0,0.01),rgba(0,0,0,0.75));
+        z-index: -1;
+     }
+
+.programBigImageName {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.2;
+    text-shadow: 4px 4px 12px rgba(0,0,0,.75);
+     color: whitesmoke;
+     text-align: right;
+   
 }
