--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,751 +1,50 @@
-/* Body */
-body {
-    /* font-family: 'Source Sans Pro', sans-serif; */
-    /* font-family: 'Karla', sans-serif; */
-    font-family: 'Roboto', sans-serif;
-  
-}
+/* 
+Theme Name: American Indian Health Service of Chicago, Inc
+Author: Alexis Bellinger
+Version: 1.0
 
-/* Quick Links */
-.quickLinks {
-    background-color: #9C1A09;
+*/
 
-  
-}
+/* 3rd party packages */
+@import "./normalize.css";
+@import "./skeleton.css";
 
-.quickLinks ul {
+/* By Pages */
 
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
- 
-}
+@import "./modules/base.css";
+@import "./modules/quickLinksBar.css";
+@import "./modules/header.css";
+@import "./modules/searchBar.css";
+@import "./modules/socialMediaNavBar.css";
+@import "./modules/navigationBar.css";
+@import "./modules/bigImage.css";
+@import "./modules/eventsAndNews.css";
+@import "./modules/missionStatement.css";
+@import "./modules/bigLinks.css";
+@import "./modules/socialMediaArea.css";
+@import "./modules/footer.css";
+@import "./modules/generalPage.css";
+@import "./modules/programPage.css";
+@import "./modules/resourcePage.css";
+@import "./modules/contact.css";
+@import "./modules/individualProgramPage.css";
 
-.quickLinks li {
-    float: right;
-    padding: 0;
-    margin-bottom: 0;
-  
-  }
-  
-.quickLinks li a {
-    
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 5px 10px;
-    text-decoration: none;
-    font-size: 12px; 
-    /* border-right: 1px solid white; */
-  }
-  
-/* Header Area */
-.logo {
-    margin: 0;
-    width: 75%;
-    height: 80%;
-    margin-bottom: -100px;
-}
 
-.logo-area {
-    margin-left: 0%; 
-}
 
-/* Search Bar */
-.search {
-    margin-right: 25px;
-}
 
-.search button {
-   padding: 0 10px; 
-}
 
 
-/* Social Media Icons-NavBar */
-.social-media-icons .fab {
-    color: rgb(219,38,14);
-    margin: 10px;  
-}
 
-.social-media-icons {
-  font-size: 30px;
-  text-align: center;
-}
 
-.fab:hover {
-    color: black;
-    transition: all 0.3s ease 0s;
-  }
 
 
-  .search input[type="text"] {
-    text-align: right;
-}
-  input[type="text"]::placeholder {
-    letter-spacing: 3px;
-  }
 
 
 
-/* Navigation Bar */
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-}
 
-.navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 5px 25px;
-    overflow: hidden;
-    list-style: none;
- 
-  }
-  
- .navbar li {
-    display: inline-block;
-    margin: 0; 
-  }
-  
- .navbar li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 0px 16px;
-    text-decoration: none;
-    letter-spacing: 3px;
-    
-    border: 1px solid transparent;
-  }
-  
-  .navbar li a:hover {
-    color: rgb(219,38,14);
-    border-bottom: 1px solid red;
-    transition: all 0.3s ease 0s;
-    /* border-bottom-width: thick; */
-  }
 
 
 
 
-  /* Search Bar */
 
-  .search {
-      margin-top: 100px;
-  }
-
-  .search-bar {
-      width: 80%;
-  }
-
-  /* Big Image */  
-  /* NOTE: Don't forget to clean out this code */
-
- .bigImage {
-    background-image: url("../images/Dancer3.jpg");
-    padding: 225px; 
-    background-size: cover;
-    margin-top: 30px; 
-    position: relative;
-    z-index: 10;
- }
-
- .bigImage::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(rgba(0,0,0,0.01),rgba(0,0,0,0.75));
-    z-index: -1;
- }
- 
-
- .motto {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 1.2;
-    text-shadow: 4px 4px 12px rgba(0,0,0,.75);
-     color: whitesmoke;
-     text-align: center;
-    
-  
- }
-
- .value {
-     text-align: center;
-  
- }
- .mainLinkArea {
-    
-    background-color: black;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.8);
-    padding: 20px;
-    text-align: center;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 50px;
- }
-
-
- .mainLink {
-    text-align: center;
-    position: relative;
-    color:white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .22);
-    font-size: 20px; 
- 
-   
-   
-   
- }
-
- .mainLinkArea:hover{
-     background-color: red;
-     cursor: pointer;
-     transition: all 0.3s ease 0s;
- }
-/* Events and News Section */
-
-.eventsAndNews {
-    padding-left: 20px; 
-    padding-right: 20px;
-    background-color: #f1f2f3;
-}
-
-.eventsAndNews h2 {
-    text-align: center;
-    
-}
-
-
-.events,
-.news {
-    /* border: .5px #ccc solid; */
-    padding: 15px;
-    height: 100%;
-    min-height: 600px;
-    /* margin-top: 30px;  */
-  
-    
-}
-
-
- .event-summary-link,
- .news-summary-link {
-    text-decoration: none;
-    display: block;
-    top: 0;
-    left: 0;
-    padding: 20px;
-    margin-top: 12px;
-    color: #FFF;
-    background-color: #0D3B66;
-    line-height: 1;
-    transition: opacity .33s;
-    text-align: center;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .22);
-}
-
-.event-summary-link:hover {
-   opacity: 0.5;
-   transition: all 0.3s ease 0s;
-}
-
-
-.event-summary-content,
-.event-summary-content h5 a ,
-.news-summary-content,
-.news-summary h5 a
-{
-    color: #333;
-    overflow-x: hidden;
-    text-decoration: none;
-} 
-
-.news-summary h5 {
-    margin-bottom: 0;
-}
-
-.event-summary h5 {
-    margin-bottom: 5px;
-}
-
-.news-author,
-.news-date {
-    font-style: italic;
-    color: #333;
-    margin-bottom: 0;
-}
-
-.news-date {
-    margin-bottom: 15px; 
-}
-
-.learn-more-link {
-    color: rgb(219,38,14); 
-}
-
-.learn-more-link:hover {
-    color: black;
-  
-}
-
-.button {
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%
-}
-
-/* Mission Statement */
-.mission-statement {
-    background-image: url("/Static_AIHSC/images/Dancer2.jpg");
-    background-color: #cccccc;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.8);
-}
-
-.mission-statement h3 {
-    font-weight: bold;
-}
-
-.mission-statement:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background: rgba(0,0,0,0.4);
-}
-
-
-.mission-statement-text {
-    /* font-family: 'Chivo', sans-serif; */
-    /* font-family: 'Poiret One', cursive; */
-    text-align: center;
-    position: relative;
-    color:white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .22);
-    /* letter-spacing: 3px; */
-    font-size: 20px; 
-}
-
-/* .mission-statement:hover {
-    font-weight: bold;
-} */
-.mission-statement-text li {
-    text-align: left;
-    margin-left: 10%; 
-    margin-right: 10%;
-}
-
-
-/* Big Links */
-
-.bigLinkArea {
-    background-color: #f1f2f3;
-    padding: 50px; 
-}
-html {
-    box-sizing: border-box; }
-  
-  *, *:before, *:after { 
-    box-sizing: inherit; }
-  
-  .square {
-    height: 0; }
-  
-  .square-100 {
-    width: 100%;
-    padding-bottom: 100%; }
-  
-  /* // Styling */
-  .square {
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
-    background-color: #eee; }
-  
-  .grid {
-    display: block;
-    padding: 0;
-    margin: 0 -6px 12px;
-    text-align: left;
-    font-size: 0; }
-  
-  .grid-cell {
-    display: inline-block;
-    margin: 0;
-    padding: 0 6px;
-    text-align: left;
-    vertical-align: top;
-    width: 100%;
-    font-size: 16px; }
-  
-  .grid-25 { width: 25%; }
-  
-  .square {
-    overflow: hidden;
-    border-radius: 8px;
-    background-size: cover;
-    box-shadow: 0 3px 12px rgba(#252243, .9); }
-    
-  .bigLinkOne {
-    background-image: url(/Static_AIHSC/images/Dancer1.jpg); }
-   
-  .bigLinkTwo {
-    background-image: url(/Static_AIHSC/images/Dancer4.jpg); }
-  
-  .bigLinkThree {
-    background-image: url(/Static_AIHSC/images/hands.jpg); }
-  
-  .bigLinkFour {
-    background-image: url(/Static_AIHSC/images/resources.jpg); }
-  
-  .title h2 {
-    font-size: 20px;
-    letter-spacing: 3px;
-    color: #fff;
-    text-shadow: 0 1px rgba(black, .6);
-    background: rgba(0,0,0, 0.5);
-    margin: 0;
-    padding: 30px;
-    
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    width: 100%;
-	transform: translate(-50%, -50%);
-}
-
-.square:hover,
-.square:focus {
-  box-shadow: 0 2px 5px rgba(0,0,0,0.8);  
-  transform: translateY(-0.25em);
-}
-
-
-/* Social Media Area */
-.social-media {
-    /* background-color: #beebff; 
-    margin-bottom: 0; */
-}
-/* Footer */
-.site-map {
-    background-color: rgb(39,37,31);
-    color: white;
-    padding: 25px;
-    -moz-box-shadow: 0 0 5px #888;
-    -webkit-box-shadow: 0 0 5px#888;
-    box-shadow: 0 0 5px #888;
-   
-}
-
-.site-map img {
-   float: right; 
-   margin-bottom: 50px;
-}
-
-.site-map .contact-info {
-    float: right;
-}
-
-.site-map li {
-    list-style: none;
-}
-
-.icon::before {
-    font-size: 20px;
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    font-weight: 900;
-    font-family: "Font Awesome 5 Free"; 
-
-}
-
-.map::before {
-    content: "\f5a0";
-}
-
-.phone::before {
-    content: "\f095";
-}
-
-.fax::before {
-    content: "\f1ac";
-}
-
-.email::before {
-    content: "\f199";
-}
-
-.clinic-hours::before {
-    content: "\f7f2";
-}
-
-.contact-info p {
-    margin: 0;
-}
-
-.contact-info li {
-    margin-bottom: 25px;
-    font-size: 15px;
-}
-
-
-.site-map a {
-    color: white;
-    text-decoration: none;
-    margin: 0;
-}
-
-.site-map a:hover {
-    color: darkgray;
-}
-
-.site-map p {
-    margin: 0;
-    padding: 0;
-}
-
-.site-map .fab {
-    padding: 10px;
-    font-size: 20px; 
-}
-
-.site-map .fab:hover {
-    color: darkgray; 
-}
-
-/* Be sure to make the year dynamic */
-.copyright {
-    text-align: center;
-    color: white;
-}
-
-
-
-/* General Page */
-
-.section-a {
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
-
-
-.page-links {
-    position: relative;
-    z-index: 1;
-    margin: 0 0 40px 0;
-  }
-  
-  @media (min-width: 767px) {
-  
-    .page-links {
-      margin: 0 0 40px 20px;
-      width: 300px;
-      float: right;
-    }
-  }
-  
-  .page-links__title {
-    margin: 0;
-    font-weight: normal;
-    text-align: center;
-    padding: 10px 0;
-    
-    color: black;
-  }
-  
-  .page-links__title a {
-    color: black;
-    text-decoration: none;
-   
-  }
-  
-  .page-links li {
-    border-top: 1px solid darkgrey;
-  }
-  
-  .page-links li:first-child {
-    border-top: none;
-  }
-
-  
-  .page-links li a {
-    display: block;
-    text-align: center;
-    padding: 5px 0px;
-    text-decoration: none;
-    color: black;
-    transition: all .3s;
-  }
-  
-  .page-links li a:hover {
-    color: rgb(219,38,14);
-
-    
-  }
-
-  .linkList {
-  padding: 0;
-  margin: 0;
-}
-
-.linkList li {
-  list-style: none;
-}
-
-/* Program Page */
-
-.programTitle {
-    color: rgb(219,38,14);
-    letter-spacing: 3px;
-    margin-top: 30px; 
-}
-
-.section-a img {
-    overflow: hidden;
-    height: 200px;
-    width: 200px;
-}
-
-.section-a .button {
-    margin: 0; 
-    color: rgb(219,38,14);
-  background-color:  white;
-  border-color: black; 
-  border-radius: 50px;
-    transition: all 0.3s ease 0s;
-  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
-  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
-}
-
-.section-a .button:hover {
-    margin: 0; 
-    color: white;
-  background-color:  rgb(219,38,14);
-  border-color: white; 
-  border-radius: 50px;
-  transition: all 0.3s ease 0s;
-  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
-  text-shadow: 0 2px 4px 0 rgba(61, 60, 60, 0.1), 0 3px 10px 0 rgba(61, 60, 60, 0.1);
-}
-
-/* Resources */
-
-.resourceTitle {
-    color: rgb(219,38,14);
-    letter-spacing: 3px;
-    margin-top: 30px; 
-}
-
-/* Contact */
-
-.contactTitle {
-    color: rgb(219,38,14);
-    letter-spacing: 3px;
-    margin-top: 30px; 
-    padding-left: 30px;
-}
-
-input,
-textarea {
-    width: 100%;
-   
-}
-
- input[type="email"],
- input[type="number"],
- input[type="search"],
- input[type="text"],
- input[type="tel"],
- input[type="url"],
- input[type="password"],
- textarea,
- select {
-  text-align: left;
-}
-
-input[type="email"],
- input[type="number"],
- input[type="search"],
- input[type="text"],
- input[type="tel"],
- input[type="url"],
- input[type="password"] {
-     height: 50px; 
- }
-
- textarea {
-    height: 150px; 
- }
-
- form {
-     padding-right: 30px; 
-     padding-left: 30px;
- }
-
- input[type="submit"] {
-     width: 100px;
-     float: right; 
- }
-
- input[type="submit"]:hover {
-   background-color: rgb(219,38,14);
-   color: white; 
-   border: white; 
-  
-}
-
-.contact-form {
-  border: 0.5px solid black; 
-  padding: 10px; 
-}
-/* Program Page */
-
-.programBigImage {
-        background-image: url("../images/Dancer1.jpg");
-        padding: 100px; 
-        background-size: cover;
-        margin-top: 30px; 
-        position: relative;
-        z-index: 10;
-     }
-    
-.programBigImage::after{
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background: linear-gradient(rgba(0,0,0,0.01),rgba(0,0,0,0.75));
-        z-index: -1;
-     }
-
-.programBigImageName {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 1.2;
-    text-shadow: 4px 4px 12px rgba(0,0,0,.75);
-     color: whitesmoke;
-     text-align: right;
-   
-}
